--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script>
     // uncomment function "startCircleGame()" to start the game
 
-      startCircleGame()
+     //startCircleGame()
 </script>
 </body>
 </html>
